app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: web-app

spec:
  type: NodePort

  selector:
    app: nginx

  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30009
